Added konst Extractors. Some Java 1 prep changes.